Site color swap

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+    <link href="Styling/CSS/main.css" rel="stylesheet"/>
+
     <head>
         <title>Marlo Digital | Home</title>
     </head>
